--- a/css/main.scss
+++ b/css/main.scss
@@ -1,9 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
 
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   height: 100vh;
   margin: 0;
   font-family: "Poppins", sans-serif;
+  overflow-x: hidden;
 }
 
 ul {
@@ -16,4 +22,5 @@ a {
   text-decoration: none;
 }
 
-@import './home';
+@import "./home";
+@import "./skills";
