--- a/css/main.scss
+++ b/css/main.scss
@@ -1,8 +1,13 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap");
 
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
@@ -23,4 +28,5 @@ a {
 }
 
 @import "./home";
+@import "./aboutMe";
 @import "./skills";
