--- a/css/_skills.scss
+++ b/css/_skills.scss
@@ -1,5 +1,6 @@
 .skills {
   width: 100%;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,7 +23,7 @@
     &-container {
       width: 120px;
       height: 120px;
-      margin: 20px 30px;
+      margin: 40px;
       padding: 20px;
       display: flex;
       align-items: center;
