--- a/css/main.css
+++ b/css/main.css
@@ -231,6 +231,7 @@ header nav ul li a {
 
 .aboutMe {
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -328,6 +329,7 @@ header nav ul li a {
 
 .skills {
   width: 100%;
+  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -368,7 +370,7 @@ header nav ul li a {
 .skills__display-container {
   width: 120px;
   height: 120px;
-  margin: 20px 30px;
+  margin: 40px;
   padding: 20px;
   display: -webkit-box;
   display: -ms-flexbox;
