--- a/css/main.css
+++ b/css/main.css
@@ -231,7 +231,6 @@ header nav ul li a {
 
 .aboutMe {
   width: 100%;
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -329,7 +328,6 @@ header nav ul li a {
 
 .skills {
   width: 100%;
-  height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -402,5 +400,158 @@ header nav ul li a {
 .skills__display-container:hover img {
   -webkit-filter: none;
           filter: none;
+}
+
+.work {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.work__main {
+  width: 100%;
+  max-width: 1000px;
+  padding: 70px 0;
+}
+
+.work__main h2 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.work__display {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.work__card {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  overflow: hidden;
+  border-radius: 3px;
+  -webkit-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+          box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
+  margin-bottom: 25px;
+}
+
+.work__card img {
+  width: 100%;
+  height: 100%;
+}
+
+.work__card-links {
+  width: 100%;
+  height: 150px;
+  background: -webkit-gradient(linear, left top, left bottom, from(transparent), to(black));
+  background: linear-gradient(to bottom, transparent, black);
+  position: absolute;
+  bottom: 0;
+  z-index: 10;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  -webkit-transform: translateY(150px);
+          transform: translateY(150px);
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+  padding: 0 0 50px 0;
+}
+
+.work__card-links a {
+  text-decoration: none;
+  color: #e2e2e2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 10px;
+  -webkit-transition: all 0.3s 0.2s;
+  transition: all 0.3s 0.2s;
+}
+
+.work__card-links a i {
+  font-size: 32px;
+}
+
+.work__card-links a p {
+  margin: 0;
+  margin-top: 5px;
+  text-align: center;
+  font-size: 12px;
+}
+
+.work__card-links a:first-child {
+  -webkit-transform: translateX(-150px);
+          transform: translateX(-150px);
+}
+
+.work__card-links a:last-child {
+  -webkit-transform: translateX(150px);
+          transform: translateX(150px);
+}
+
+.work__card:hover .work__card-links {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.work__card:hover .work__card-links a {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.githubwars {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background: #121212;
+  color: #fff;
+}
+
+.githubwars span {
+  font-size: 32px;
+}
+
+.githubwars span:last-child {
+  color: #b2ffe6;
 }
 /*# sourceMappingURL=main.css.map */
