--- a/css/_aboutMe.scss
+++ b/css/_aboutMe.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0 32px;
+  padding: 32px 10px;
 
   &__main {
     width: 100%;
@@ -12,7 +12,35 @@
     h2 {
       text-align: center;
       text-transform: uppercase;
-      margin-bottom: 20px;
+      position: relative;
+      width: 130px;
+      margin: auto;
+      margin-bottom: 30px;
+      display: block;
+      transition: all 0.3s;
+      cursor: default;
+
+      &::after {
+        content: "";
+        width: 100%;
+        height: 6px;
+        background: #000;
+        border-radius: 3px;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        transform-origin: 0 0;
+        transform: scaleX(0);
+        transition: all 0.3s;
+      }
+
+      &:hover {
+        color: #6e00ff;
+        &::after {
+          background: #6e00ff;
+          transform: scaleX(1);
+        }
+      }
     }
   }
 
@@ -50,6 +78,30 @@
       @media only screen and (max-width: 1000px) {
         text-align: center;
       }
+    }
+  }
+}
+
+.social {
+  display: block;
+  margin: 20px 0 0 0;
+  ul {
+    width: 100%;
+    display: flex;
+
+    i {
+      color: #000;
+      font-size: 24px;
+    }
+
+    li {
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
+    }
+
+    @media only screen and (max-width: 1000px) {
+      justify-content: center;
     }
   }
 }
