--- a/css/_hireme.scss
+++ b/css/_hireme.scss
@@ -1,9 +1,10 @@
-.skills {
+.hireme {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 0 10px;
+  background: #6e00ff;
   &__main {
     width: 100%;
     max-width: 1000px;
@@ -12,18 +13,19 @@
       text-align: center;
       text-transform: uppercase;
       position: relative;
-      width: 80px;
+      width: 100px;
       margin: auto;
       margin-bottom: 30px;
       display: block;
       transition: all 0.3s;
+      color: #fff;
       cursor: default;
 
       &::after {
         content: "";
         width: 100%;
         height: 6px;
-        background: #000;
+        background: #fff;
         border-radius: 3px;
         position: absolute;
         bottom: -2px;
@@ -34,42 +36,59 @@
       }
 
       &:hover {
-        color: #6e00ff;
         &::after {
-          background: #6e00ff;
           transform: scaleX(1);
         }
       }
     }
+    p {
+      text-align: center;
+      color: #fff;
+      margin-bottom: 20px;
+    }
   }
-  &__display {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-wrap: wrap;
+}
 
-    &-container {
-      width: 120px;
-      height: 120px;
-      margin: 40px;
-      padding: 20px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      transition: all 0.3s;
-      border-radius: 3px;
-      img {
-        width: 100%;
-        filter: grayscale(1);
-        transition: all 0.3s;
-      }
-      &:hover {
-        box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3);
-        img {
-          filter: none;
+.contactLinks {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  &__list {
+    list-style: none;
+    display: flex;
+    align-items: center;
+    li {
+      a {
+        color: #fff;
+        i {
+          font-size: 24px;
         }
       }
+
+      &:not(:last-child) {
+        margin-right: 20px;
+      }
     }
+  }
+}
+
+.caption {
+  font-weight: 300;
+  font-size: 18px;
+}
+
+.email {
+  font-weight: 300;
+  a {
+    color: #fff;
+  }
+}
+
+.phone {
+  font-weight: 300;
+  a {
+    color: #fff;
   }
 }
