--- a/css/_work.scss
+++ b/css/_work.scss
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0 10px;
 
   &__main {
     width: 100%;
@@ -12,7 +13,35 @@
     h2 {
       text-align: center;
       text-transform: uppercase;
-      margin-bottom: 20px;
+      position: relative;
+      width: 80px;
+      margin: auto;
+      margin-bottom: 40px;
+      display: block;
+      transition: all 0.3s;
+      cursor: default;
+
+      &::after {
+        content: "";
+        width: 100%;
+        height: 6px;
+        background: #000;
+        border-radius: 3px;
+        position: absolute;
+        bottom: -2px;
+        left: 0;
+        transform-origin: 0 0;
+        transform: scaleX(0);
+        transition: all 0.3s;
+      }
+
+      &:hover {
+        color: #6e00ff;
+        &::after {
+          background: #6e00ff;
+          transform: scaleX(1);
+        }
+      }
     }
   }
 
